Support domain name changes for testing purposes

--- a/roles/echaloasuerte_php/templates/apache_website.conf
+++ b/roles/echaloasuerte_php/templates/apache_website.conf
@@ -1,8 +1,8 @@
 
 <VirtualHost *:80>
 	#Pickforme english
-    ServerName 2011.pickforme.net
-    ServerAlias beta.2011.pickforme.net www.pickforme.net pickforme.net
+    ServerName 2011.{{ EN_FQDN }}
+    ServerAlias beta.2011.{{ EN_FQDN }} www.{{ EN_FQDN }} {{ EN_FQDN }}
 	ServerAdmin webmaster@localhost
     DocumentRoot {{ web_2011_dir }}/en/
 	ErrorLog {{ root_log_dir }}/2011/en_error.log
@@ -15,8 +15,8 @@
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName 2011.echaloasuerte.com
-    ServerAlias beta.2011.echaloasuerte.com www.echaloasuerte.com echaloasuerte.com
+    ServerName 2011.{{ ES_FQDN }}
+    ServerAlias beta.2011.{{ ES_FQDN }} www.{{ ES_FQDN }} {{ ES_FQDN }}
 	ServerAdmin webmaster@localhost
     DocumentRoot {{ web_2011_dir }}
 	ErrorLog {{ root_log_dir }}/2011/es_error.log
@@ -29,7 +29,7 @@
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName 2009.echaloasuerte.com
+    ServerName 2009.{{ ES_FQDN }}
 	ServerAdmin webmaster@localhost
     DocumentRoot {{ web_2009_dir }}
 	ErrorLog {{ root_log_dir }}/2009/es_error.log
