--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -68,6 +68,9 @@
   retries: 5
   delay: 1
 
-- copy: src=indexes.js dest=/tmp
+- copy:
+    src: indexes.js
+    dest: /tmp
+
 - name: Add mongodb indexes
   shell: mongo < /tmp/indexes.js
