mongodb: only can be connected from the same host

--- a/roles/mongodb/templates/mongod.conf
+++ b/roles/mongodb/templates/mongod.conf
@@ -15,7 +15,7 @@ logappend=true
 #port = 27017
 
 # Listen to local interface only. Comment out to listen on all interfaces. 
-#bind_ip = 127.0.0.1
+bind_ip = 127.0.0.1
 
 # Disables write-ahead journaling
 # nojournal = true
