Purge cloudflare cache when deploying echaloasuerte

--- a/roles/echaloasuerte_django/tasks/main.yml
+++ b/roles/echaloasuerte_django/tasks/main.yml
@@ -93,3 +93,9 @@
   service:
     name: apache2
     state: started
+
+- name: Purge cloudflare cache
+  shell: 'curl -X DELETE "https://api.cloudflare.com/client/v4/zones/{{item}}/purge_cache" -H "X-Auth-Email: mariocj89@gmail.com" -H "X-Auth-Key: {{cloudflare_api_token}}"'
+  with_items:
+    - "{{cloudflare_echaloasuerte_id}}"
+    - "{{cloudflare_pickforme_id}}"
