echaloasuerte_django: Restart apache when installing new version

--- a/roles/echaloasuerte_django/tasks/main.yml
+++ b/roles/echaloasuerte_django/tasks/main.yml
@@ -23,6 +23,8 @@
     update: yes
     accept_hostkey: True
     force: yes
+  notify:
+  - restart apache
 
 - name: Add xip.io to the ALLOWED_HOSTS list when TEST_DEPLOYMENT is defined
   lineinfile:
