--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,17 @@
+language: ruby
+rvm:
+  - "1.9.3"
 install:
-  - sudo apt-get update -q
-  - sudo apt-get install virtualbox-4.1
-#  - sudo apt-get install -q virtualbox --fix-missing
-#  - sudo apt-get install -q virtualbox-ose-dkms linux-headers-$(uname -r)
-#  - sudo apt-get install -q vagrant --fix-missing
-  - sudo wget -nv https://dl.bintray.com/mitchellh/vagrant/vagrant_1.7.2_x86_64.deb
-  - sudo dpkg -i vagrant_1.7.2_x86_64.deb
-#  - bundle install
-  - sudo apt-get install zlib1g-dev
-  - sudo apt-get install nfs-kernel-server
-  - sudo apt-get install libvirt-dev
-  - sudo apt-get install qemu-utils
-
+  - sudo echo "deb http://download.virtualbox.org/virtualbox/debian precise contrib" | sudo tee -a /etc/apt/sources.list
+  - wget http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc -O- | sudo apt-key add -
+  - sudo apt-get update
+  - sudo apt-get -y install linux-headers-$(uname -r)
+  - sudo apt-get -y install virtualbox-4.2
+  - VBoxManage -v
+  - wget http://files.vagrantup.com/packages/be0bc66efc0c5919e92d8b79e973d9911f2a511f/vagrant_1.0.5_i686.deb
+  - sudo dpkg -i vagrant_1.0.5_i686.deb
 script:
-#  - VBoxManage --version
-#  - vagrant plugin install vagrant-libvirt
-#  - vagrant plugin install vagrant-mutate
-  - vagrant box add ubuntu/trusty64
-#  - vagrant mutate ubuntu/trusty64 libvirt
-
-  - vagrant up
-
-
-#VAGRANT_DEFAULT_PROVIDER=libvirt
+  - /opt/vagrant/bin/vagrant up
+  - ls
+  - /opt/vagrant/bin/vagrant ssh --command "touch /vagrant/smash_it_with_a_hammer"
+  - ls
