--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ install:
 #  - wget http://files.vagrantup.com/packages/be0bc66efc0c5919e92d8b79e973d9911f2a511f/vagrant_1.0.5_i686.deb
 #  - sudo dpkg -i vagrant_1.0.5_i686.deb
 script:
+  - mv group_vars/test_vars group_vars/all
   - ansible-playbook -i hosts_local site.yml
