--- a/webservers.yml
+++ b/webservers.yml
@@ -3,5 +3,6 @@
   roles:
   - users
   - apache
+  - { role: monitoring }
   - { role: echaloasuerte_django, datadir: "/data" }
   - { role: echaloasuerte_php, datadir: "/data" }
