--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -18,6 +18,17 @@
     name: apache2
     state: started
 
+- mame: Disable direct ip traffic
+  copy:
+    src: deny_raw_access.conf
+    dest: /etc/apache2/sites-available/deny_raw_access.conf
+
+- name: Enable apache the prev config
+  file:
+    src: ../sites-available/deny_raw_access.conf
+    dest: /etc/apache2/sites-enabled/deny_raw_access.conf
+    state: link
+
 - name: Disable apache default site
   file:
       path: "/etc/apache2/sites-enabled/000-default.conf"
