--- a/roles/apache/files/deny_raw_access.conf
+++ b/roles/apache/files/deny_raw_access.conf
@@ -2,8 +2,7 @@
 <VirtualHost _default_:80>
     Redirect 403 /
     ErrorDocument 403 "Sorry, direct IP access not allowed."
-    DocumentRoot /usr/local/apache/htdocs
+    DocumentRoot /var/www/html/
     ServerAdmin me@mysite.com
     UseCanonicalName Off
-    UserDir disabled
 </VirtualHost>
