--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -18,8 +18,7 @@
     name: apache2
     state: started
 
-- mame: Disable direct ip traffic
-  copy:
+- copy:
     src: deny_raw_access.conf
     dest: /etc/apache2/sites-available/deny_raw_access.conf
 
