--- a/roles/echaloasuerte_django/templates/echaloasuerte.conf
+++ b/roles/echaloasuerte_django/templates/echaloasuerte.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 	ServerName {{ ES_FQDN }}
-	ServerAlias {{ EN_FQDN }} dev.{{ EN_FQDN }} dev.{{ ES_FQDN }}
+	ServerAlias {{ EN_FQDN }} dev.{{ EN_FQDN }} dev.{{ ES_FQDN }} www.{{ ES_FQDN }} www.{{ EN_FQDN }}
 	WSGIDaemonProcess {{ ES_FQDN }} processes=2 threads=15 python-path={{ echaloasuerte_app }}:{{ echaloasuerte_venv }}lib/python2.7/site-packages:{{ echaloasuerte_venv }}/lib/python2.7 display-name=%{GROUP}
 	WSGIProcessGroup {{ ES_FQDN }}
 	WSGIScriptAlias / {{ echaloasuerte_root }}//web-app/echaloasuerte.wsgi
