--- a/roles/echaloasuerte_django/templates/echaloasuerte.conf
+++ b/roles/echaloasuerte_django/templates/echaloasuerte.conf
@@ -1,4 +1,10 @@
+ExpiresActive on
+
 <VirtualHost *:80>
+    <Location /static/>
+        ExpiresDefault "access plus 1 year"
+    </Location>
+
 	ServerName {{ ES_FQDN }}
 	ServerAlias {{ EN_FQDN }} dev.{{ EN_FQDN }} dev.{{ ES_FQDN }} www.{{ ES_FQDN }} www.{{ EN_FQDN }}
 	WSGIDaemonProcess {{ ES_FQDN }} processes=2 threads=15 python-path={{ echaloasuerte_app }}:{{ echaloasuerte_venv }}lib/python2.7/site-packages:{{ echaloasuerte_venv }}/lib/python2.7 display-name=%{GROUP}
