mongodb.conf: Re-write configuration in YAML
Following their documentation:

- http://docs.mongodb.org/manual/reference/configuration-options/

Also use smallfiles option for the journal. And ensure that we remove
the journal files in the default location /var/lib/mongodb.

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -74,3 +74,8 @@
 
 - name: Add mongodb indexes
   shell: mongo < /tmp/indexes.js
+
+- name: Remove huge journal files not needed
+  file:
+    path: /var/lib/mongodb/journal
+    state: absent
