--- a/roles/mongodb/templates/mongod.conf
+++ b/roles/mongodb/templates/mongod.conf
@@ -1,76 +1,18 @@
 # mongod.conf
+# See http://docs.mongodb.org/manual/reference/configuration-options/ for more info
 
-# Where to store the data.
+systemLog:
+  destination: file
+  path: {{ mongodb_datadir_prefix }}/log/mongod.log
+  logAppend: true
 
-# Note: if you run mongodb as a non-root user (recommended) you may
-# need to create and set permissions for this directory manually,
-# e.g., if the parent directory isn't mutable by the mongodb user.
-dbpath={{ mongodb_datadir_prefix }}/db
+storage:
+   dbPath: {{ mongodb_datadir_prefix }}/db
+   journal:
+      enabled: true
+   mmapv1:
+      smallFiles: true
 
-#where to log
-logpath={{ mongodb_datadir_prefix }}/log/mongod.log
-
-logappend=true
-
-#port = 27017
-
-# Listen to local interface only. Comment out to listen on all interfaces. 
-bind_ip = 127.0.0.1
-
-# Disables write-ahead journaling
-# nojournal = true
-
-# Enables periodic logging of CPU utilization and I/O wait
-#cpu = true
-
-# Turn on/off security.  Off is currently the default
-#noauth = true
-#auth = true
-
-# Verbose logging output.
-#verbose = true
-
-# Inspect all client data for validity on receipt (useful for
-# developing drivers)
-#objcheck = true
-
-# Enable db quota management
-#quota = true
-
-# Set oplogging level where n is
-#   0=off (default)
-#   1=W
-#   2=R
-#   3=both
-#   7=W+some reads
-#diaglog = 0
-
-# Ignore query hints
-#nohints = true
-
-# Enable the HTTP interface (Defaults to port 28017).
-#httpinterface = true
-
-# Turns off server-side scripting.  This will result in greatly limited
-# functionality
-#noscripting = true
-
-# Turns off table scans.  Any query that would do a table scan fails.
-#notablescan = true
-
-# Disable data file preallocation.
-#noprealloc = true
-
-# Specify .ns file size for new databases.
-# nssize = <size>
-
-# Replication Options
-
-# in replicated mongo databases, specify the replica set name here
-#replSet=setname
-# maximum size in megabytes for replication operation log
-#oplogSize=1024
-# path to a key file storing authentication info for connections
-# between replica set members
-#keyFile=/path/to/keyfile
-
+net:
+   bindIp: 127.0.0.1
+   port: 27017
