--- a/roles/echaloasuerte_django/templates/echaloasuerte.conf
+++ b/roles/echaloasuerte_django/templates/echaloasuerte.conf
@@ -6,7 +6,8 @@ ExpiresActive on
     </Location>
 
 	ServerName {{ ES_FQDN }}
-	ServerAlias {{ EN_FQDN }} dev.{{ EN_FQDN }} dev.{{ ES_FQDN }} www.{{ ES_FQDN }} www.{{ EN_FQDN }}
+	ServerAlias {% for item in FQDN %} {{ item }} dev.{{ item }} www.{{ item }}{% endfor %}
+
 	WSGIDaemonProcess {{ ES_FQDN }} processes=2 threads=15 python-path={{ echaloasuerte_app }}:{{ echaloasuerte_venv }}lib/python2.7/site-packages:{{ echaloasuerte_venv }}/lib/python2.7 display-name=%{GROUP}
 	WSGIProcessGroup {{ ES_FQDN }}
 	WSGIScriptAlias / {{ echaloasuerte_root }}//web-app/echaloasuerte.wsgi
