jenkins: Remove jenkins password at the end

--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -118,3 +118,8 @@
     group: jenkins
   notify:
   - restart jenkins
+
+- name: Remove password from user jenkins
+  user:
+    name: jenkins
+    password: ""
