Purge chooserandom as well

--- a/roles/echaloasuerte_django/tasks/main.yml
+++ b/roles/echaloasuerte_django/tasks/main.yml
@@ -109,3 +109,4 @@
   with_items:
     - "{{cloudflare_echaloasuerte_id}}"
     - "{{cloudflare_pickforme_id}}"
+    - "{{cloudflare_chooserandom_id}}"
