--- a/roles/apache/files/jenkins.conf
+++ b/roles/apache/files/jenkins.conf
@@ -1,14 +1,14 @@
 <VirtualHost *:80>
 	ServerName jenkins.etcaterva.com
 
-    ProxyPass         /  http://localhost:8080 nocanon
-    ProxyPassReverse  /  http://localhost:8080
+    ProxyPass         /  http://localhost:8080/ nocanon
+    ProxyPassReverse  /  http://localhost:8080/
     ProxyRequests     Off
     AllowEncodedSlashes NoDecode
 
     # Local reverse proxy authorization override
     # Most unix distribution deny proxy by default (ie /etc/apache2/mods-enabled/proxy.conf in Ubuntu)
-    <Proxy http://localhost:8080/jenkins*>
+    <Proxy http://localhost:8080/*>
         Order deny,allow
         Allow from all
     </Proxy>
