--- a/roles/echaloasuerte_django/tasks/main.yml
+++ b/roles/echaloasuerte_django/tasks/main.yml
@@ -53,6 +53,9 @@
   notify:
   - restart apache
 
+- name: Set pusher token
+  shell: sed -i "s/PUSHER_SECRET_PLACEHOLDER/{{ pusher_secret }}/g" {{ echaloasuerte_app }}/echaloasuerte/settings/common.py
+
 - name: Set gmail password
   shell: sed -i "s/GMAIL_PASSWORD_PLACEHOLDER/{{ echaloasuerte_gmail_password }}/g" {{ echaloasuerte_app }}/echaloasuerte/settings/common.py
 
