Fixup git clone task

--- a/roles/echaloasuerte_django/tasks/main.yml
+++ b/roles/echaloasuerte_django/tasks/main.yml
@@ -21,7 +21,7 @@
     repo: git://github.com/etcaterva/EchaloASuerte.git
     dest: "{{ echaloasuerte_app }}"
     update: yes
-    accept_hostkey: True
+    accept_hostkey: yes
     force: yes
   notify:
   - restart apache
