--- a/webservers.yml
+++ b/webservers.yml
@@ -4,4 +4,4 @@
   - users
   - apache
   - { role: monitoring }
-  - { role: echaloasuerte_django, datadir: "/data" }
+  - { role: echaloasuerte, datadir: "/data" }
