Move logs to /var/logs

--- a/roles/echaloasuerte/templates/echaloasuerte.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte.conf
@@ -19,6 +19,6 @@ ExpiresActive on
 		Allow from all
 	        Require all granted
 	</Directory>
-	CustomLog {{ echaloasuerte_root }}//logs/custom.log combined
-	ErrorLog {{ echaloasuerte_root }}//logs/error.log
+	CustomLog {{echaloasuerte_logs}}//apache.log combined
+	ErrorLog {{echaloasuerte_logs}}//apache_error.log
 </VirtualHost>
