--- a/roles/echaloasuerte/tasks/main.yml
+++ b/roles/echaloasuerte/tasks/main.yml
@@ -1,8 +1,8 @@
 - set_fact:
     echaloasuerte_root: "{{ datadir }}/apache/serve/echaloasuerte"
-- set_fact:
     echaloasuerte_app: "{{ echaloasuerte_root }}/web-app"
     echaloasuerte_venv: "{{ echaloasuerte_root }}/venv"
+    echaloasuerte_logs: "/var/logs/echaloasuerte"
 
 - name: Create echaloasuerte application tree
   file:
@@ -11,10 +11,10 @@
     owner: www-data
     recurse: yes
   with_items:
-  - "{{ echaloasuerte_root }}/logs"
   - "{{ echaloasuerte_root }}/static"
   - "{{ echaloasuerte_app }}"
   - "{{ echaloasuerte_venv }}"
+  - "{{ echaloasuerte_logs }}"
 
 - name: Clone/update repository in {{ echaloasuerte_app }}
   git:
@@ -82,10 +82,10 @@
     owner: www-data
     recurse: yes
   with_items:
-  - "{{ echaloasuerte_root }}/logs"
   - "{{ echaloasuerte_root }}/static"
   - "{{ echaloasuerte_app }}"
   - "{{ echaloasuerte_venv }}"
+  - "{{ echaloasuerte_logs }}"
 
 - name: Create the apache config file
   template:
