set_fact can't use a variable defined in the same block
This bug was introduced in 22a0a652, the way to fix it
is to create a different 'set_fact' block to define the
variable that is going to be used later.

--- a/roles/echaloasuerte/tasks/main.yml
+++ b/roles/echaloasuerte/tasks/main.yml
@@ -1,5 +1,6 @@
 - set_fact:
     echaloasuerte_root: "{{ datadir }}/apache/serve/echaloasuerte"
+- set_fact:
     echaloasuerte_app: "{{ echaloasuerte_root }}/web-app"
     echaloasuerte_venv: "{{ echaloasuerte_root }}/venv"
     echaloasuerte_logs: "/var/log/echaloasuerte"
