Run as root all the roles in webservers.yml playbook

--- a/webservers.yml
+++ b/webservers.yml
@@ -1,7 +1,7 @@
 - hosts: ECHALOASUERTE
   remote_user: root
   roles:
-  - users
-  - apache
-  - { role: monitoring }
-  - { role: echaloasuerte, datadir: "/data" }
+  - { role: users, become: yes }
+  - { role: apache, become: yes }
+  - { role: monitoring, become: yes  }
+  - { role: echaloasuerte, datadir: "/data", become: yes  }
