Move mongo logs to /var/logs

--- a/roles/mongodb/templates/mongod.conf
+++ b/roles/mongodb/templates/mongod.conf
@@ -3,7 +3,7 @@
 
 systemLog:
   destination: file
-  path: {{ mongodb_datadir_prefix }}/log/mongod.log
+  path: /var/log/mongo/mongod.log
   logAppend: true
 
 storage:
