--- a/roles/echaloasuerte/tasks/main.yml
+++ b/roles/echaloasuerte/tasks/main.yml
@@ -1,5 +1,5 @@
 - set_fact:
-    echaloasuerte_root: "{{ datadir }}/apache/serve/echaloasuerte"
+    echaloasuerte_root: "/var/www/echaloasuerte"
 - set_fact:
     echaloasuerte_app: "{{ echaloasuerte_root }}/web-app"
     echaloasuerte_venv: "{{ echaloasuerte_root }}/venv"
