--- a/roles/echaloasuerte/templates/echaloasuerte.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte.conf
@@ -12,7 +12,7 @@ ExpiresActive on
 	WSGIProcessGroup {{ ES_FQDN }}
 	WSGIScriptAlias / {{ echaloasuerte_root }}//web-app/echaloasuerte.wsgi
 	Alias /media {{ echaloasuerte_root }}//media
-	Alias /static {{ echaloasuerte_root }}//static
+	Alias /static {{ echaloasuerte_static }}
 
 	<Directory {{ echaloasuerte_root }}/>
 		Order allow,deny
