--- a/roles/echaloasuerte/handlers/main.yml
+++ b/roles/echaloasuerte/handlers/main.yml
@@ -1,5 +1,11 @@
-- name: restart apache
+- name: restart nginx
   service:
-    name: apache2
+    name: nginx
+    state: restarted
+    sleep: 5
+
+- name: restart uwsgi
+  service:
+    name: uwsgi
     state: restarted
     sleep: 5
