Implement load balancer using various uwsgi emperors

--- a/roles/echaloasuerte/handlers/main.yml
+++ b/roles/echaloasuerte/handlers/main.yml
@@ -4,8 +4,9 @@
     state: restarted
     sleep: 5
 
-- name: restart uwsgi
+- name: restart all uwsgi
   service:
-    name: uwsgi
+    name: uwsgi{{ item }}
     state: restarted
     sleep: 5
+  with_sequence: count={{ uwsgi_n }}
