--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -1,3 +1,8 @@
+upstream backend  {
+{% for number in range(1, uwsgi_n+1, 1) %}  server unix:/var/www/echaloasuerte/echaloasuerte-uwsgi{{ number }}.sock;
+{% endfor %}
+}
+
 server {
     listen 80;
     server_name {% for item in FQDN %} {{ item }} dev.{{ item }} www.{{ item }}{% endfor %};
@@ -10,6 +15,6 @@ server {
 
     location / {
         include         uwsgi_params;
-        uwsgi_pass      unix:{{ echaloasuerte_root }}/echaloasuerte.sock;
+        uwsgi_pass      backend;
     }
 }
