--- a/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
@@ -6,7 +6,7 @@ wsgi-file = echaloasuerte.wsgi
 master = true
 processes = 5
 
-socket = {{ echaloasuerte_root }}/echaloasuerte.sock
-logto = {{ echaloasuerte_logs }}/echaloasuerte-uwsgi.log
+socket = {{ echaloasuerte_root }}/echaloasuerte-uwsgi{{ item }}.sock
+logto = {{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}.log
 chmod-socket = 664
 vacuum = true
