--- a/roles/echaloasuerte/tasks/main.yml
+++ b/roles/echaloasuerte/tasks/main.yml
@@ -1,4 +1,7 @@
 - set_fact:
+    uwsgi_n: 2
+
+- set_fact:
     echaloasuerte_root: "/var/www/echaloasuerte"
 - set_fact:
     echaloasuerte_app: "{{ echaloasuerte_root }}/web-app"
@@ -27,7 +30,7 @@
     accept_hostkey: yes
     force: yes
   notify:
-  - restart uwsgi
+  - restart all uwsgi
 
 - name: Add xip.io to the ALLOWED_HOSTS list when TEST_DEPLOYMENT is defined
   lineinfile:
@@ -54,7 +57,7 @@
     src: echaloasuerte.wsgi
     dest: "{{ echaloasuerte_app }}/echaloasuerte.wsgi"
   notify:
-  - restart uwsgi
+  - restart all uwsgi
 
 - name: Compile messages of django application
   shell: |
@@ -88,9 +91,10 @@
 - name: Create uwsgi config file for echaloasuerte
   template:
     src: echaloasuerte-uwsgi.ini
-    dest: /etc/uwsgi/sites/echaloasuerte.ini
+    dest: /etc/uwsgi{{ item }}/sites/echaloasuerte.ini
+  with_sequence: count={{ uwsgi_n }}
   notify:
-  - restart uwsgi
+  - restart all uwsgi
 
 - name: Create the nginx config file for echaloasuerte
   template:
