--- a/roles/mongodb/templates/mongod.conf
+++ b/roles/mongodb/templates/mongod.conf
@@ -7,7 +7,7 @@ systemLog:
   logAppend: true
 
 storage:
-   dbPath: {{ mongodb_datadir_prefix }}/db
+   dbPath: {{ mongodb_datadir_prefix }}
    journal:
       enabled: true
    mmapv1:
