--- a/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
@@ -1,4 +1,6 @@
 [uwsgi]
+plugins-dir = {{ uwsgi_plugins_dir }}
+plugin = python27
 chdir = {{ echaloasuerte_app }}
 home = {{ echaloasuerte_venv }}
 wsgi-file = echaloasuerte.wsgi
