--- a/roles/nginx/templates/uwsgi-upstart.conf
+++ b/roles/nginx/templates/uwsgi-upstart.conf
@@ -5,4 +5,4 @@ stop on runlevel [!2345]
 
 env USER=www-data
 
-exec start-stop-daemon --start --chuid $USER --make-pidfile --pidfile /var/run/uwsgi{{ item }}.pid --exec /usr/local/bin/uwsgi -- --emperor /etc/uwsgi{{ item }}/sites >> /var/log/uwsgi{{ item }}.log 2>&1
+exec start-stop-daemon --start --chuid $USER --make-pidfile --pidfile /var/run/uwsgi{{ item }}.pid --exec /usr/bin/uwsgi -- --emperor /etc/uwsgi{{ item }}/sites >> /var/log/uwsgi{{ item }}.log 2>&1
