--- a/webservers.yml
+++ b/webservers.yml
@@ -2,6 +2,7 @@
   remote_user: root
   roles:
   - { role: users, become: yes }
-  - { role: nginx, become: yes }
+  - nginx
   - { role: monitoring, become: yes  }
-  - { role: echaloasuerte, datadir: "/data", become: yes  }
+  - echaloasuerte
+  - echaloasuerte-3
