--- a/roles/nginx/handlers/main.yml
+++ b/roles/nginx/handlers/main.yml
@@ -3,11 +3,13 @@
     name: nginx
     state: restarted
     sleep: 5
+  become: yes
 
 - name: restart all uwsgi
   service:
     name: uwsgi{{ item }}
     state: restarted
     sleep: 5
+  become: yes
   with_sequence: count={{ uwsgi_n }}
   when: TRAVIS_DEPLOYMENT is not defined
