Split playbooks to decide better what version to install

--- a/site3.yml
+++ b/site3.yml
@@ -1,6 +1,6 @@
 ---
 - import_playbook: bootstrap-python.yml
 - import_playbook: config-users.yml
-- import_playbook: config-mongodb.yml
-- import_playbook: config-eas2.yml
+- import_playbook: config-postgresql.yml
+- import_playbook: config-eas3.yml
 - import_playbook: config-monitoring.yml
